--- a/assets/styles/_content.scss
+++ b/assets/styles/_content.scss
@@ -158,7 +158,7 @@ body{
 
     .ambos__primerafila__container{
         position: relative;
-        height: 600px;
+        height: auto;
         width: 325px;
         box-shadow: 0 0 20px 5px map-get(c.$colores, sombra) ;
         margin-bottom: 40px;
@@ -173,12 +173,19 @@ body{
             text-align: center;
             margin-bottom: 15px;
         }
+
+        .precio__productos{
+            display: none;
+            text-align: center;
+            margin-bottom: 15px;
+        }
     
         .texto__productos--purchase{
             text-align: center;
         }
     
         .enlace {
+            display: none;
             text-decoration: none;
             color: map-get(c.$colores, links);
             padding: 7px;
