--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -122,7 +122,7 @@ body {
 }
 #productos .ambos__primerafila__container {
   position: relative;
-  height: 600px;
+  height: auto;
   width: 325px;
   box-shadow: 0 0 20px 5px #e4c5f3;
   margin-bottom: 40px;
@@ -136,10 +136,16 @@ body {
   text-align: center;
   margin-bottom: 15px;
 }
+#productos .ambos__primerafila__container .precio__productos {
+  display: none;
+  text-align: center;
+  margin-bottom: 15px;
+}
 #productos .ambos__primerafila__container .texto__productos--purchase {
   text-align: center;
 }
 #productos .ambos__primerafila__container .enlace {
+  display: none;
   text-decoration: none;
   color: white;
   padding: 7px;
