--- a/assets/styles/_content.scss
+++ b/assets/styles/_content.scss
@@ -9,7 +9,7 @@
     "cab"
     "ppal"
     "nom"
-    "prod"
+    "gallwrp"
     "comp"
     "pie"
     
@@ -131,6 +131,86 @@ body{
 
     .encabezado{
         padding-top: 20px;
+    }
+}
+
+// CONTENIDO GALLERY-WRAP
+
+#gallery_wrap{
+    grid-area: gallwrp;
+    max-width: 960px;
+    margin-inline: auto;
+    padding: 100px 15px;
+
+    .gallery-wrapper{
+        display: flex;
+
+        .gallery-item{
+            position: relative;
+            isolation: isolate;
+            display: flex;
+            flex: 1;
+            height: 500px;
+            background-color: #000;
+            padding: 25px;
+            opacity: 1;
+            overflow: hidden;
+            transition: flex 0.5s, opacity 0.25s;
+
+            &:hover{
+                opacity: 1;
+                flex: 5;
+            }
+
+            &:not(:hover){
+                opacity: 0.75;
+            }
+
+            .item-image{
+                position: absolute;
+                top: 0;
+                right: 0;
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+            }
+
+            .item-description{
+                align-self: flex-end;
+                text-transform: uppercase;
+                color: #fff;
+
+                .name{
+                    font-size: 37px;
+                    background: linear-gradient(90deg,#f32d5b,#ff009b);
+                    padding-inline: 10px;
+                    transform: translateY(-10px);
+                }
+
+                .role{
+                    opacity: 0;
+                    transition: opacity 0.25s;
+                    transform: 0.3s;
+                    transition-delay: .35s;
+
+                }
+
+
+            }
+
+            .gallery-item:hover .name,
+            .gallery-item:hover .role {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+            .gallery-item:not(:hover) .name,
+            .gallery-item:not(:hover) .role {
+                transition-delay: 0s;
+            }
+        }
     }
 }
 
