--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -37,7 +37,7 @@
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: repeat(6, auto);
-  grid-template-areas: "cab" "ppal" "nom" "prod" "comp" "pie";
+  grid-template-areas: "cab" "ppal" "nom" "gallwrp" "comp" "pie";
 }
 
 #contenedor__contacto {
@@ -103,6 +103,71 @@ body {
 }
 #nomenclatura .encabezado {
   padding-top: 20px;
+}
+
+#gallery_wrap {
+  grid-area: gallwrp;
+  max-width: 960px;
+  margin-inline: auto;
+  padding: 100px 15px;
+}
+#gallery_wrap .gallery-wrapper {
+  display: flex;
+}
+#gallery_wrap .gallery-wrapper .gallery-item {
+  position: relative;
+  isolation: isolate;
+  display: flex;
+  flex: 1;
+  height: 500px;
+  background-color: #000;
+  padding: 25px;
+  opacity: 1;
+  overflow: hidden;
+  transition: flex 0.5s, opacity 0.25s;
+}
+#gallery_wrap .gallery-wrapper .gallery-item:hover {
+  opacity: 1;
+  flex: 5;
+}
+#gallery_wrap .gallery-wrapper .gallery-item:not(:hover) {
+  opacity: 0.75;
+}
+#gallery_wrap .gallery-wrapper .gallery-item .item-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#gallery_wrap .gallery-wrapper .gallery-item .item-description {
+  align-self: flex-end;
+  text-transform: uppercase;
+  color: #fff;
+}
+#gallery_wrap .gallery-wrapper .gallery-item .item-description .name {
+  font-size: 37px;
+  background: linear-gradient(90deg, #f32d5b, #ff009b);
+  padding-inline: 10px;
+  transform: translateY(-10px);
+}
+#gallery_wrap .gallery-wrapper .gallery-item .item-description .role {
+  opacity: 0;
+  transition: opacity 0.25s;
+  transform: 0.3s;
+  transition-delay: 0.35s;
+}
+#gallery_wrap .gallery-wrapper .gallery-item .gallery-item:hover .name,
+#gallery_wrap .gallery-wrapper .gallery-item .gallery-item:hover .role {
+  opacity: 1;
+  transform: translateY(0);
+}
+#gallery_wrap .gallery-wrapper .gallery-item .gallery-item:not(:hover) .name,
+#gallery_wrap .gallery-wrapper .gallery-item .gallery-item:not(:hover) .role {
+  transition-delay: 0s;
 }
 
 #productos {
